# cmsc23320

./: .gitignore  README.md  academic-honesty.html  academic-integrity.html  academic_honesty.html  calendar.html  ci.html  cmsc23300.html  code-of-conduct.html  code_of_conduct.html  getting-help.html  git.html  grading.html  index.html  initial_code.html  project1_rubric.html  project1_tips.html  project2_rubric.html  project2_tips.html  project3_rubric.html  project3_tips.html  projects.html  questions.html  registering.html  resources.html  style_guide.html  submit.html  syllabus.html  working_in_pairs.html
projects/: initial_code.html  project1.html  project1_rubric.html  project1_tips.html  project2.html  project2_rubric.html  project2_tips.html  project3.html  project3_rubric.html  project3_tips.html  registering_submitting.html  specs.html  started.html
resources/: git.html  other.html  questions.html
samples/: CMakeLists.txt
samples/captures/: irc.pcapng
samples/chirc/: project1a-trivial.c
samples/pthreads/: thread-exit.c
samples/sockets/: client-bomb.c  client.c  oneshot-single.c  server-pthreads-condvar.c  server-pthreads-mutex.c  server-pthreads.c
scripts/: grade-chirc.sh  grade-chitcp.sh
website/: Makefile  academic-honesty.rst  academic-integrity.rst  academic_honesty.rst  calendar.rst  ci.rst  coc.rst  code-of-conduct.rst  conf.py  description.txt  getting-help.rst  git.rst  grading.rst  index.rst  initial_code.rst  project1_tips.rst  project3_tips.rst  projects.rst  questions.rst  registering.rst  style_guide.rst  submit.rst  syllabus.rst
(+24 files in other folders)
